Update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todomvc-ember-orbit-server",
+  "name": "todomvc-orbit-server",
   "version": "0.5.0",
   "author": "Paul Chavard",
   "license": "MIT",
