--- a/package.json
+++ b/package.json
@@ -4,32 +4,39 @@
   "author": "Paul Chavard",
   "license": "MIT",
   "dependencies": {
-    "@orbit-server/fastify": "^0.8.2",
-    "fastify": "^2.8.0",
-    "fastify-cli": "^1.2.0",
-    "fastify-plugin": "^1.6.0",
-    "inflected": "^2.0.4",
-    "orbit-sql": "^0.3.0",
-    "sqlite3": "^4.1.0"
+    "koa": "^2.13.1",
+    "koa-orbit": "^0.2.1",
+    "orbit-sql": "^0.4.2",
+    "sqlite3": "^5.0.2"
   },
   "scripts": {
-    "routes": "yarn fastify print-routes ./dist/src/app.js",
-    "postinstall": "tsc",
-    "start": "tsc-watch --onSuccess \"yarn start:dev\"",
-    "test": "NODE_ENV=test qunit --require ts-node/register 'test/**/*-test.ts'",
-    "start:dev": "fastify start -l info -P dist/src/app.js",
-    "start:heroku": "fastify start -a '0.0.0.0' -l info dist/src/app.js"
+    "dev": "ts-node-dev src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc",
+    "test": "jest",
+    "lint": "eslint . --ext .ts"
   },
   "engines": {
-    "node": ">= 10.*"
+    "node": ">= 14.*"
+  },
+  "prettier": {
+    "singleQuote": true
   },
   "devDependencies": {
-    "@types/inflected": "^1.1.29",
-    "@types/node": "^12.7.3",
-    "@types/qunit": "^2.9.0",
-    "qunit": "^2.9.2",
-    "ts-node": "^8.3.0",
-    "tsc-watch": "^2.4.0",
-    "typescript": "^3.6.2"
+    "@types/jest": "^26.0.20",
+    "@types/koa": "^2.13.0",
+    "@types/node": "^14.14.31",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.2",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.2.2"
   }
 }
